--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>URGO</title>
+    </style>
   </head>
-  <body>
+  <body class="gray-bg">
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
     <div id="root"></div>
     <!--
